--- a/app/Resources/views/dashboard/index.html.twig
+++ b/app/Resources/views/dashboard/index.html.twig
@@ -41,7 +41,7 @@
                 <div class="icon">
                     <i class="fas fa-comment-dots"></i>
                 </div>
-                <a href="{{ path('app_admin_ask_advice_index') }}" class="small-box-footer">
+                <a href="{{ path('app_admin.ask_advice_index') }}" class="small-box-footer">
                     Plus d'infos
                     <i class="fas fa-arrow-circle-right"></i>
                 </a>
