--- a/app/Resources/views/campus/index.html.twig
+++ b/app/Resources/views/campus/index.html.twig
@@ -10,11 +10,11 @@
                     {{ form_row(form.label) }}
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin_campus_index')  }}">Réinitialiser les filtres</a>
+                    <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin.campus_index')  }}">Réinitialiser les filtres</a>
                 </div>
                 <div class="offset-md-4"></div>
                 <div class="col-md-3 col-sm-6 text-right">
-                    <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_campus_new')  }}">Ajouter un campus</a>
+                    <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin.campus_new')  }}">Ajouter un campus</a>
                 </div>
             </div>
             <input type="submit" style="position: absolute; left: -9999px"/>
@@ -35,7 +35,7 @@
                     {% for campus in pagination %}
                         <tr>
                             <td>
-                                <a href="{{ path('app_admin_campus_edit', { 'id' : campus.id }) }}">{{ campus.label }}</a>
+                                <a href="{{ path('app_admin.campus_edit', { 'id' : campus.id }) }}">{{ campus.label }}</a>
                             </td>
                             <td>
                                 {{ campus.obsolete|humanizeBoolean }}
