--- a/app/Resources/views/equipment/index.html.twig
+++ b/app/Resources/views/equipment/index.html.twig
@@ -11,11 +11,11 @@
                         {{ form_row(form.label) }}
                     </div>
                     <div class="col-md-3 col-sm-6">
-                        <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin_equipment_index')  }}">Réinitialiser les filtres</a>
+                        <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin.equipment_index')  }}">Réinitialiser les filtres</a>
                     </div>
                     <div class="offset-md-3"></div>
                     <div class="col-md-3 col-sm-6">
-                        <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_equipment_new')  }}">Ajouter un équipement</a>
+                        <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin.equipment_new')  }}">Ajouter un équipement</a>
                     </div>
                 </div>
                 {{ form_end(form) }}
@@ -34,7 +34,7 @@
                     <tbody>
                     {% for equipment in pagination %}
                         <tr>
-                            <td><a href="{{ path('app_admin_equipment_edit', { 'id' : equipment.id }) }}">{{ equipment.label }}</a></td>
+                            <td><a href="{{ path('app_admin.equipment_edit', { 'id' : equipment.id }) }}">{{ equipment.label }}</a></td>
                             <td>{{ equipment.labelVisibility|humanizeBoolean }}</td>
                             <td>{{ equipment.obsolete|humanizeBoolean }}</td>
                         </tr>
