--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -1,6 +1,6 @@
 {% macro printActiveAdminSidebarLink(routes, options) %}
     {% for route in routes %}
-        {% if  route in  'app_admin_activity' %}
+        {% if  route in  'app_admin.activity' %}
             {% if options.activityType is defined %}
                 {{ app.request.attributes.get('type') in options.activityType ? 'active' }}
             {% else %}
@@ -37,9 +37,9 @@
             </a>
         </li>
 
-        {% set referentielLink = ['app_admin_activity', 'app_admin_type_activity', 'app_admin_mode_activity','app_admin_year',
-            'app_admin_equipment', 'app_admin_structure', 'app_admin_domain', 'app_admin_period_index', 'app_admin_language_index',
-            'app_admin_campus', 'app_admin_achievement', 'app_admin_course_info_field_index'] %}
+        {% set referentielLink = ['app_admin.activity', 'app_admin.type_activity', 'app_admin.mode_activity','app_admin.year',
+            'app_admin.equipment', 'app_admin.structure', 'app_admin.domain', 'app_admin.period_index', 'app_admin.language_index',
+            'app_admin.campus', 'app_admin.achievement', 'app_admin.course_info_field_index'] %}
         <li class="nav-item has-treeview {{ printActiveAdminSidebarLink(referentielLink) ? 'menu-open' }}">
             <a href="#" class="nav-link {{ printActiveAdminSidebarLink(referentielLink) }}">
                 <i class="nav-icon fas fa-book"></i>
@@ -52,8 +52,8 @@
                 style="display: {{ printActiveAdminSidebarLink(referentielLink) ? 'block' : 'none' }};">
 
                 <li class="nav-item pl-2">
-                    <a href="{{ path('app_admin_achievement_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_achievement']) }}">
+                    <a href="{{ path('app_admin.achievement_index') }}"
+                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin.achievement']) }}">
                         <i class="fas fa-map-marker-alt nav-icon"></i>
                         <p>
                             Acquis critiques
@@ -61,7 +61,7 @@
                     </a>
                 </li>
 
-                {% set activityLink = ['app_admin_activity', 'app_admin_type_activity', 'app_admin_mode_activity'] %}
+                {% set activityLink = ['app_admin.activity', 'app_admin.type_activity', 'app_admin.mode_activity'] %}
                 <li class="nav-item pl-2 has-treeview {{ printActiveAdminSidebarLink(activityLink) ? 'menu-open' }}">
                     <a href="#" class="nav-link {{ printActiveAdminSidebarLink(activityLink) }}">
                         <i class="nav-icon fas fa-film"></i>
@@ -73,8 +73,8 @@
                     <ul class="nav nav-treeview"
                         style="display: {{ printActiveAdminSidebarLink(activityLink) ? 'block' : 'none' }};">
                         <li class="pl-3">
-                            <a href="{{ path('app_admin_activity_index') }}"
-                               class="nav-link {{ printActiveAdminSidebarLink(['app_admin_activity']) }}">
+                            <a href="{{ path('app_admin.activity_index') }}"
+                               class="nav-link {{ printActiveAdminSidebarLink(['app_admin.activity']) }}">
                                 <i class="fas fa-dot-circle nav-icon"></i>
                                 <p>
                                     Activités
@@ -82,8 +82,8 @@
                             </a>
                         </li>
                         <li class="pl-3">
-                            <a href="{{ path('app_admin_type_activity_index') }}"
-                               class="nav-link {{ printActiveAdminSidebarLink(['app_admin_type_activity']) }}">
+                            <a href="{{ path('app_admin.type_activity_index') }}"
+                               class="nav-link {{ printActiveAdminSidebarLink(['app_admin.type_activity']) }}">
                                 <i class="fas fa-dot-circle nav-icon"></i>
                                 <p>
                                     Types
@@ -91,8 +91,8 @@
                             </a>
                         </li>
                         <li class="pl-3">
-                            <a href="{{ path('app_admin_mode_activity_index') }}"
-                               class="nav-link {{ printActiveAdminSidebarLink(['app_admin_mode_activity']) }}">
+                            <a href="{{ path('app_admin.mode_activity_index') }}"
+                               class="nav-link {{ printActiveAdminSidebarLink(['app_admin.mode_activity']) }}">
                                 <i class="fas fa-dot-circle nav-icon"></i>
                                 <p>
                                     Modes
@@ -103,8 +103,8 @@
                 </li>
 
                 <li class="nav-item pl-2">
-                    <a href="{{ path('app_admin_year_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_year']) }}">
+                    <a href="{{ path('app_admin.year_index') }}"
+                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin.year']) }}">
                         <i class="nav-icon fas fa-calendar"></i>
                         <p>
                             Années
@@ -113,8 +113,8 @@
                 </li>
 
                 <li class="nav-item pl-2">
-                    <a href="{{ path('app_admin_campus_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_campus']) }}">
+                    <a href="{{ path('app_admin.campus_index') }}"
+                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin.campus']) }}">
                         <i class="fas fa-map-marker-alt nav-icon"></i>
                         <p>
                             Campus
@@ -123,8 +123,8 @@
                 </li>
 
                 <li class="nav-item pl-2">
-                    <a href="{{ path('app_admin_domain_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_domain']) }}">
+                    <a href="{{ path('app_admin.domain_index') }}"
+                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin.domain']) }}">
                         <i class="fas fa-gem nav-icon"></i>
                         <p>
                             Domaines
@@ -133,8 +133,8 @@
                 </li>
 
                 <li class="nav-item pl-2">
-                    <a href="{{ path('app_admin_equipment_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_equipment']) }}">
+                    <a href="{{ path('app_admin.equipment_index') }}"
+                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin.equipment']) }}">
                         <i class="nav-icon fas fa-drafting-compass"></i>
                         <p>
                             Equipements
@@ -143,8 +143,8 @@
                 </li>
 
                 <li class="nav-item pl-2">
-                    <a href="{{ path('app_admin_language_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_language']) }}">
+                    <a href="{{ path('app_admin.language_index') }}"
+                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin.language']) }}">
                         <i class="fas fa-language nav-icon"></i>
                         <p>
                             Langues
@@ -153,8 +153,8 @@
                 </li>
 
                 <li class="nav-item pl-2">
-                    <a href="{{ path('app_admin_period_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_period']) }}">
+                    <a href="{{ path('app_admin.period_index') }}"
+                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin.period']) }}">
                         <i class="nav-icon fas fa-calendar-week"></i>
                         <p>
                             Périodes
@@ -163,8 +163,8 @@
                 </li>
 
                 <li class="nav-item pl-2">
-                    <a href="{{ path('app_admin_structure_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_structure']) }}">
+                    <a href="{{ path('app_admin.structure_index') }}"
+                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin.structure']) }}">
                         <i class="nav-icon fas fa-building"></i>
                         <p>
                             Structures
