--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -29,6 +29,7 @@
 </head>
 
 <body class="sidebar-mini layout-navbar-fixed layout-fixed control-sidebar-slide-open">
+{{ include('partial/_admin_message_modal.html.twig') }}
 {% block modals %}{% endblock %}
 <div class="container-loader">
     <i class="fas fa-circle-notch text-primary fa-2x fa-spin"></i>
