Refactor ActivityType controller

--- a/app/Resources/views/action/_activity_type_create.html.twig
+++ b/app/Resources/views/action/_activity_type_create.html.twig
@@ -1,3 +1,3 @@
 {% if is_granted('ROLE_ADMIN_ACTIVITYTYPE_CREATE') %}
-    <a class="btn btn-primary"  href="{{  path('app_admin.activity_new')  }}">Ajouter un type d'activité</a>
+    <a class="btn btn-primary"  href="{{  path('app.admin.activity_type.new')  }}">Ajouter un type d'activité</a>
 {% endif %}
