--- a/app/Resources/views/activity/index.html.twig
+++ b/app/Resources/views/activity/index.html.twig
@@ -23,7 +23,7 @@
                     <div class="col-12">
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary">Filtrer</button>
-                            <a class="btn btn-danger" href="{{  path('app.admin.activity')  }}">Réinitialiser les filtres</a>
+                            <a class="btn btn-danger" href="{{  path('app.admin.activity.index')  }}">Réinitialiser les filtres</a>
                         </div>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                     {% for activity in pagination %}
                         <tr>
                             <td>
-                                <a href="{{ path('app.admin.activity_edit', { 'id' : activity.id }) }}">{{ activity.label }}</a>
+                                <a href="{{ path('app.admin.activity.edit', { 'id' : activity.id }) }}">{{ activity.label }}</a>
                             </td>
                             <td>
                                 {% for activityType in activity.activityTypes %}
