--- a/app/Resources/views/activity_mode/index.html.twig
+++ b/app/Resources/views/activity_mode/index.html.twig
@@ -22,7 +22,7 @@
                     <div class="col-12">
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary">Filtrer</button>
-                            <a class="btn btn-danger" href="{{  path('app_admin.mode_activity_index')  }}">Réinitialiser les filtres</a>
+                            <a class="btn btn-danger" href="{{  path('app.admin.activity_mode.index')  }}">Réinitialiser les filtres</a>
                         </div>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                     {% for activityMode in pagination %}
                         <tr>
                             <td>
-                                <a href="{{ path('app_admin.mode_activity_edit', { 'id' : activityMode.id }) }}">{{ activityMode.label }}</a>
+                                <a href="{{ path('app.admin.activity_mode.edit', { 'id' : activityMode.id }) }}">{{ activityMode.label }}</a>
                             </td>
                             <td>{{ activityMode.obsolete|humanizeBoolean }}</td>
                         </tr>
