--- a/app/Resources/views/course_info/objectives_course/view/critical_achievement.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/critical_achievement.html.twig
@@ -18,7 +18,7 @@
     {% for criticalAchievement in courseInfo.courseCriticalAchievements %}
 
         <div id="card-achievement" class="card my-2 shadow card-syllabus"
-             data-view-url="{{ path('objective_course_achievement_view', {'id': courseInfo.id }) }}"
+             data-view-url="{{ path('objectives.achievements', {'id': courseInfo.id }) }}"
         >
             <div class="card-header" style="background-color: #c0c0c0">
                 <div class="d-flex justify-content-between">
