--- a/app/Resources/views/student_view.html.twig
+++ b/app/Resources/views/student_view.html.twig
@@ -1,19 +1,42 @@
-{% extends 'base.html.twig' %}
-{% block main %}
-    <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-        {% block navbar %}{% endblock %}
-    </nav>
-    <aside class="main-sidebar sidebar-dark-primary elevation-4">
-        <a href="{{ logoHref|default('#') }}" class="brand-link elevation-4 logo-switch">
-            <img src="{{ asset('images/uca-logo-dark-small.png') }}" alt="Logo Syllabus" class="brand-image-xs logo-xs">
-            <img src="{{ asset('images/uca-logo-dark.png') }}" alt="Logo Syllabus" class="brand-image-xl logo-xl">
-        </a>
-        {% block sidebar %}{% endblock %}
-    </aside>
-    <div class="content-wrapper">
-        {% block content %}{% endblock %}
+{% extends 'base_homepage.html.twig' %}
+{% block navbar %}
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
+        </li>
+    </ul>
+{% endblock %}
+{% block content %}
+
+    <div class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                    <h1 class="m-0 text-dark">{{ courseInfo.title }}</h1>
+                </div><!-- /.col -->
+
+            </div><!-- /.row -->
+        </div><!-- /.container-fluid -->
     </div>
-    <footer class="main-footer">
-        {% block footer %}{% endblock %}
-    </footer>
+
+
+    <section id="content-{{ contentName|default('default') }}" class="content">
+        <div class="container-fluid">
+            {% block subContent %}
+
+                <!-- presentation du cours -->
+                <div class="card">
+                    <div class="card-header">
+                    </div>
+                </div>
+
+
+            {% endblock %}
+        </div>
+    </section>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('course_info_layout') }}
 {% endblock %}
