Refactor Year contoller

--- a/app/Resources/views/action/_year_create.html.twig
+++ b/app/Resources/views/action/_year_create.html.twig
@@ -1,3 +1,3 @@
 {% if is_granted('ROLE_ADMIN_YEAR_CREATE') %}
-    <a class="btn btn-primary float-right" href="{{ path('app_admin_year_new') }}">Ajouter une année</a>
+    <a class="btn btn-primary float-right" href="{{ path('app.admin.year.new') }}">Ajouter une année</a>
 {% endif %}
